[tool.poetry]
name = "cgePy"
version = "1.0.0-pre.1"
description = "A lightweight terminal graphics engine"
packages = [
	{include = "cge"}
]
authors = ["catbox305"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/catbox305/cge"
documentation = "https://cgepy.github.io/docs"

[tool.poetry.dependencies]
python = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

