[tool.poetry]
name = "cgePy"
version = "0.7.3"
description = "A lightweight terminal graphics engine"
packages = [
	{include = "cge"}
]
authors = ["catbox305"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/catbox305/cge"
documentation = "https://cgepy.github.io/docs"

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

