[tool.poetry]
name = "cgePy"
version = "0.6.5"
description = "Tools for developing graphical programs inside the console."
authors = ["catbox305 <lion712yt@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

